--- a/tests/gradle/libs.versions.toml
+++ b/tests/gradle/libs.versions.toml
@@ -7,23 +7,19 @@ org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.
 
 [versions]
 
-kotlin = "1.8.0"
+kotlin = "1.8.21"
 
-ktor = "2.2.2"
+ktor = "2.3.0"
 
-kotlinx-serialization = "1.4.1"
+kotlinx-serialization = "1.5.0"
 kotlinx-coroutines = "1.6.4"
 
 okio = "3.3.0"
 
 kermit = "1.2.2"
 
-secretk = "1.2.0"
-
-bignum = "0.3.7"
-libsodium = "0.8.7"
-bip39 = "1.0.2-mpp"
-ripemd160 = "1.1.3-nativempp"
+secretk = "3.0.4"
+getenv = "0.1.0"
 
 [libraries]
 
@@ -36,6 +32,8 @@ com-squareup-okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 co-touchlab-kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 
 io-eqoty-secretk-client = { module = "io.eqoty.secretk:client", version.ref = "secretk" }
+io-eqoty-secretk-deploy-utils = { module = "io.eqoty.secretk:deploy-utils", version.ref = "secretk" }
+io-github-luca992-getenv = { module = "io.github.luca992.getenv-kt:getenv", version.ref = "getenv" }
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref = "ktor" }
